--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "express-typescript-boilerplate",
   "version": "1.0.0",
   "description": "An Express server template written in TypeScript",
-  "main": "src/server.ts",
+  "main": "src/server.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "npx nodemon src/server.ts",
+    "dev": "npx nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "vercel-build": "echo 'Running build on Vercel 👀'"
   },
@@ -21,11 +21,23 @@
   },
   "homepage": "https://github.com/phamduylong/express-typescript-template#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.15.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^18.19.56",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
   }
